[package]
name = "league-toolkit"
version = "0.1.1"
edition = "2018"
authors = ["crauzer"]
license-file = "LICENSE"
description = "Library for parsing and editing files from League of Legends"
homepage = "https://github.com/Crauzer/league-toolkit"
repository = "https://github.com/Crauzer/league-toolkit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.1"
num_enum = "0.5.4"
thiserror = "1.0.30"
